cli/tests/snapshot/inputs/errors/let_block_not_rec.ncl
# capture = 'stderr'
# command = ['eval']
let
  a = 2,
  b = a
in
b
